--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +20,7 @@ allprojects {
         maven { url "https://www.jitpack.io" }
         //个推私有Maven URL地址
         maven { url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/" }
+        google()
     }
 }
 
@@ -31,7 +33,7 @@ ext{
     versionName = '1.0.0'
 
     // 相关依赖库版本
-    supportVersion = '25.3.1'
+    supportVersion = '27.0.2'
     butterknifeVersion = '8.5.1'
     geniusVersion = '2.0.0'
     glideVersion = '3.7.0'
@@ -45,7 +47,7 @@ ext{
     getuiVersion = '2.9.3.0'
     dbflowVersion = "4.0.0-beta7"
     airpanelVersion = "1.1.0"
-    lameVersion = "1.0.0"
+    lameVersion = "1.2.0"
     rxjavaVersion="2.1.1"
     rxandroidVersion="2.0.1"
 }
